--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@react-three/drei": "^9.111.3",
     "@react-three/fiber": "8.16",
+    "aframe": "^1.6.0",
     "react": "18.3",
     "react-colorful": "^5.6.1",
     "react-dom": "18.3",
